[package]
name = "rept"
version = "0.1.0"
authors = ["Tianjiao <richard.dtj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
rocket-multipart-form-data = "0.9.2"
rocket-include-static-resources = "0.9.3"
rocket-raw-response = "0.4.8"
lopdf = "0.24.0"
dirs = "2.0.2"
chrono = "0.4.11"
